--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@prisma/client": "^6.0.1",
     "@radix-ui/themes": "^3.1.6",
     "classnames": "^2.5.1",
+    "easymde": "^2.18.0",
     "next": "15.1.0",
     "prisma": "^6.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-simplemde-editor": "^5.2.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
