--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@prisma/client": "^6.0.1",
     "@radix-ui/themes": "^3.1.6",
+    "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "easymde": "^2.18.0",
     "next": "15.1.0",
     "prisma": "^6.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
     "react-simplemde-editor": "^5.2.0",
     "zod": "^3.24.1"
