--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.0.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.1.4",
+    "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "easymde": "^2.18.0",
